<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/lato_bold"
        android:text="1"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/plane_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/sc1" />

        <TextView
            android:id="@+id/textView0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/sc2"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/a0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_a0"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_background"
            android:text="@string/nextBtn"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/plane_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout0">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/sc3" />

        <TextView
            android:id="@+id/textView1.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/sc4"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_a1"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_background"
            android:text="@string/nextBtn"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/plane_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/sc5" />

        <TextView
            android:id="@+id/textView2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/sc6"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_a2"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_background"
            android:text="@string/nextBtn"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/plane_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sc7" />

        <TextView
            android:id="@+id/textView3_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sc8"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_a3"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:text="@string/nextBtn"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/plane_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sc9" />

        <TextView
            android:id="@+id/textView4_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sc10"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/a4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_a4"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:text="@string/nextBtn"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/plane_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout4">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1" />


        <EditText
            android:id="@+id/a5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_a5"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:text="@string/nextBtn"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/plane_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout5">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2" />


        <EditText
            android:id="@+id/a6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_a6"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:text="@string/nextBtn"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/plane_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout6">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3" />

        <EditText
            android:id="@+id/a7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_a7"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:text="@string/nextBtn"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/plane_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout7">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4" />

        <EditText
            android:id="@+id/a8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_a8"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:text="@string/nextBtn"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/plane_background"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout8">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5" />

        <EditText
            android:id="@+id/a9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_a9"
            android:layout_width="276dp"
            android:layout_height="50dp"
            android:text="@string/nextBtn"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>